# NescordBot

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.bak  Makefile  Procfile  README.md  bash.exe.stackdump  main.py  nixpacks.toml  nixpacks.toml.bak  package.json.bak  pyproject.toml  railway.json  requirements.txt  run.py  settings.local.json.backup  start.py
.claude/: settings.local.json
.claude/commands/: create-commit.md  create-issue.md  design.md  git-create-pr.md  requirements.md  spec.md  tasks.md
.claude/scripts/: deny-check.ps1  deny-check.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-batch-solution.yml  ci-cogs-bot-test.yml  ci-database-test.yml  ci-git-only-test.yml  ci-github-obsidian-test.yml  ci-simple.yml  ci-success-update.yml  ci.yml  claude.yml  codeql.yml  debug-hanging-tests.yml  deploy.yml  pr-validation.yml  project-update.yml  railway-deploy.yml
.serena/: project.yml
.serena/memories/: CI_test_hang_issue_resolution_2025-08-30.md  async_exception_handling_lessons_2025_08_28.md  branch_strategy_and_ci_rules_2025_08_31.md  ci_cd_infrastructure_improvements_2025_08_25.md  ci_test_hanging_breakthrough_2025-08-30.md  ci_test_hanging_issue_pr141.md  ci_test_hanging_issue_resolution_complete.md  claude_code_mcp_troubleshooting.md  code_style_conventions.md  codebase_architecture.md  comprehensive_development_history_phase3_completion_2025_08_21.md  github-issue-project-automation.md  github_automated_workflow_implementation.md  issue_108_completed_status_2025_08_31.md  issue_108_development_start_2025_08_31.md  issue_110_auto_tagging_development_start_2025_08_31.md  issue_111_fleeting_note_enhancement_completed_2025_08_31.md  issue_117_privacy_manager_design_2025_09_03.md  issue_78_completion_session.md  issue_89_production_fix_complete_2025_08_23.md  knowledgemanager-implementation-complete.md  mcp_server_selection_discord_bot.md  merge_command_operation_flow_issue_109.md  phase4_architecture_integration_patterns_2025_08_25.md  phase4_branch_integration_strategy_2025_08_25.md  phase4_development_approach_optionB_2025_09_02.md  phase4_development_direction_analysis_2025_08_24.md  phase4_development_progress_2025_08_27.md  phase4_development_start_point_2025_08_24.md  phase4_embedding_service_development_2025_08_25.md  phase4_integrated_design_completion_2025_08_24.md  phase4_integration_test_analysis_2025_09_05.md  phase4_integration_test_improvement_plan_2025_09_05.md  phase4_integration_test_phase1_and_phase2_completion_2025_09_05.md  phase4_integration_test_solution_2025_09_05.md  phase4_release_quality_achievement_final_2025_09_05.md  phase4_services_final_status_2025_09_05.md  phase4_services_implementation_status.md  phase4_status_2025_09_02.md  phase4_task_design_completion_2025_08_24.md  (+32 more)
.tmp/: next_session_guide.md
ci-logs/: test-results.xml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PHASE3_SUMMARY.md  README.md  complete-deployment-guide.md  design.md  production-setup-guide.md  project-management.md  railway-deployment.md  requirements.md  tasks.md
docs/architecture/: README.md
docs/deployment/: README.md  railway-guide.md  railway-persistent-volumes.md
docs/design/: obsidian_github_integration.md
docs/development/: README.md  improved_workflow.md
docs/operations/: README.md  phase4-project-ids.md  phase4-tasks.md  project-management.md  session_handover.md  tasks.md
docs/project-history/: README.md  phase3-summary.md
docs/requirements/: README.md  obsidian_github_integration.md  original_development_foundation.md  phase4_requirements.md  system_requirements.md
scripts/: check_commit_msg.py
src/: __init__.py  bot.py  config.py  index.js.bak  logger.py
src/cogs/: admin.py  general.py  voice.py
src/commands/: help.js.bak
src/nescordbot/: __init__.py  __main__.py  bot.py  config.py  logger.py  main.py  security.py
src/services/: database.py
src/utils/: __init__.py
tests/: __init__.py  conftest.py  test_admin_cog.py  test_admin_functionality.py  test_batch_processor.py  test_bot.py  test_bot_integration.py  test_cogs_general.py  test_config.py  test_database_service.py  test_debug_command.py  test_git_operations.py  test_github_auth.py  test_logger.py  test_note_processing.py  test_obsidian_github.py  test_obsidian_github_integration.py  test_obsidian_service_injection.py  test_persistent_queue.py  test_railway_persistence.py  test_run.py  test_search_engine.py  test_services_github.py  test_text_cog.py  test_text_integration.py  test_voice.py  test_voice_regression.py
(+100 files in other folders)
