[tool.poetry]
name = "nescordbot"
version = "1.0.0"
description = "Discord Bot with voice transcription and AI-powered features"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.2"
python-dotenv = "^1.0.0"
openai = "^1.10.0"
pydub = "^0.25.1"
ffmpeg-python = "^0.2.0"
aiohttp = "^3.9.1"
numpy = "^1.24.3"
pandas = "^2.0.3"
psutil = "^5.9.5"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
aiosqlite = "^0.19.0"
colorlog = "^6.8.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
flake8 = "^6.1.0"
pytest = "^7.4.4"
pytest-asyncio = "^0.21.1"
mypy = "^1.8.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
